# aceflow

./: README.md  pyproject.toml
examples/: advanced.ipynb  basics.ipynb
src/ACE_jobflow.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ace_jobflow/: __init__.py
src/ace_jobflow/flows/: data.py  data_gen.py  trainer.py
src/ace_jobflow/jobs/: data.py  train.py
src/ace_jobflow/utils/: active_learning.py  active_set_generator.py  structure_sampler.py  util.py
src/aceflow/: __init__.py  temp_scripts.py
src/aceflow/active_learning/: active_learning.py  base.py  core.py
src/aceflow/core/: active_learning.py  model.py
src/aceflow/flows/: data.py  trainer.py
src/aceflow/jobs/: data.py  train.py
src/aceflow/reference_objects/: BBasis_classes.py  input_template.yaml
src/aceflow/schemas/: core.py
src/aceflow/utils/: active_learning.py  cleaner.py  config.py  input_writer.py  structure_sampler.py  trained_potential.py  util.py
src/aceflow/utils/reference_objects/: grace_finetune_template.yaml  grace_template.yaml
