[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "aceflow"
version = "0.0.1"
dependencies = [
  "pymatgen",
  "pandas",
  "jobflow",
  "fireworks",
  "mp_api"
]
requires-python = ">=3.8"
authors = [
  {name = "Vir Karan", email = "virkaran@berkeley.edu"},
]
description = "Jobflow wrapper for pacemaker"
readme = "README.md"